# kretro

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  APKBUILD  CMakeLists.txt  README.md  org.kde.kretro.desktop  org.kde.kretro.json  org.kde.kretro.json.license  org.kde.kretro.metainfo.xml
LICENSES/: LicenseRef-Snes9x.txt
android/: AndroidManifest.xml  build.gradle  version.gradle.in
android/res/drawable/: logo.png.license  splash.xml
po/ar/: kretro.po
po/ca/: kretro.po
po/ca@valencia/: kretro.po
po/cs/: kretro.po
po/de/: kretro.po
po/es/: kretro.po
po/eu/: kretro.po
po/fi/: kretro.po
po/fr/: kretro.po
po/ga/: kretro.po
po/he/: kretro.po
po/it/: kretro.po
po/ka/: kretro.po
po/ko/: kretro.po
po/lt/: kretro.po
po/nl/: kretro.po
po/pt_BR/: kretro.po
po/sk/: kretro.po
po/sl/: kretro.po
po/sv/: kretro.po
po/tr/: kretro.po
po/ug/: kretro.po
po/uk/: kretro.po
po/zh_CN/: kretro.po
po/zh_TW/: kretro.po
src/: CMakeLists.txt  Messages.sh  RetroFrame.cpp  RetroFrame.h  about.cpp  about.h  app.cpp  app.h  idleinhibit.cpp  idleinhibit.h  kretroconfig.kcfg  kretroconfig.kcfgc  libretro.h  main.cpp  resources.qrc  retroframe.cpp  retroframe.h  retrogamemodel.cpp  retrogamemodel.h  retrogamesavemodel.cpp  retrogamesavemodel.h  retropad.cpp  retropad.h
src/contents/cores/: README.md
src/contents/cores/x86_64/: 2048_libretro.so.license  mednafen_gba_libretro.so.license  quicknes_libretro.so.license  snes9x_libretro.so.license
src/contents/img/: SinewareLabs.001.png.license
src/contents/ui/: About.qml  MobileController.qml  MobilePlayer.qml  SaveManager.qml  main.qml
src/contents/ui/haptics/: HapticsEffectLoader.qml  HapticsEffectWrapper.qml
src/objects/: retrogame.cpp  retrogame.h  retrogamesave.cpp  retrogamesave.h
src/qml/: Help.qml  Main.qml  MobileController.qml  MobilePlayer.qml  SaveManager.qml  Settings.qml  SettingsRetroCore.qml  SettingsRetroPad.qml
src/qml/components/: PageContainer.qml  PageHeader.qml  PageStack.qml
src/qml/haptics/: HapticsEffectLoader.qml  HapticsEffectWrapper.qml
